--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "devDependencies": {
     "turbo": "^2.5.3"
   },
-  "packageManager": "pnpm@10.0.0"
+  "packageManager": "pnpm@10.0.0",
+  "volta": {
+    "node": "22.15.0",
+    "pnpm": "10.0.0"
+  }
 }
